--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -147,7 +147,7 @@ $('.cloudinary-fileupload').bind('fileuploadprogress', function(e, data) {
 })
 </script>
 <script type="text/javascript">
-$(img).error(function(){
+$('img').error(function(){
 $(this).remove();
 })
 </script>
