--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -60,99 +60,7 @@
 
 
   <div class="span8 offset1"> 
-    <h2>New Products</h2>
-    
-	<br />
-    <div class="accordion" id="accordion">      
-      
-      <% if @products.blank? %>
-      
-        <div class="accordion-group">
-          <div class="accordion-heading">
-            <em>There are no products in your store.</em>
-          </div>
-        </div>
-      
-      <% else %>
-      
-        <%  @products.each_with_index do |product, index| %>
-		   
-          <div class="accordion-group">
-            <div class="accordion-heading">
-              
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#<%= product.id %>">
-                <%= product.title %> <span class="pull-right muted"><%= product.price_range %> <%= shop_session.shop.currency %></span>
-              </a>
-            </div>
-        
-            <div id="<%= product.id %>" class="accordion-body collapse <% if index == 1 %>in<% end %>">
-              <div class="accordion-inner">
-
-                <% if !product.images.empty? %>
-				<h4>Current Images for this product</h4>
-				<% product.images.each_with_index do | img, index1| %>
-					<div class="polaroid">
-					<%= link_to image_tag(img.small), '#modal-'+product.id.to_s, :'data-toggle' => 'modal' %>
-					 </div>
-				<% end %>
-                  
-                <% end %>
-                
-              <% if !product.variants.empty? %>
-			  
-				<h4>Variants For this product</h4>
-					  <%  product.variants.each_with_index do |variant, index2| %>
-					    <h3 style="clear:both"><%= variant.title %></h3>
-					   <div class='variants-section' style='float:left;clear:left'>
-					  
-					   <h4>Variant Image for this product</h4>
-					<%= form_for(:product, :url => {:action => 'upload', :id => product.id, :vid =>variant.id ,:vtitle=>variant.title}, :html => {:multipart => true}) do |f| %>
-<%= f.file_field(:product_image) %>
-<%= submit_tag('Upload') %>
-<% end %>	  
-				</div>
-				<div class='swatch-section' style='float:right'>
-					<h4>Swatch Image for this variant</h4>
-					<%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{variant.title}-#{variant.id}",:resource_type=>'image',:crop => :limit, :width => 1000, :height => 1000, 
-                          :html => {:class => "image_upload"}) %>
-					</div><!-- variants-section-->
-					  
-					  <% end %>
-					  
-			  <% end %>
-                <p style="clear:both"><%= link_to raw('View in your Shopify Admin <i class="icon-chevron-right" style="opacity:.25"></i>'), "https://#{shop_session.url}/admin/products/#{product.id}", :target => 'blank', :class => 'btn btn-primary' %></p>
-              </div>
-              
-            </div>
-          </div>
-          
-          <div class="modal hide fade" id="modal-<%= product.id %>" style="display:none;">
-            <div class="modal-header">
-              <a class="close" data-dismiss="modal">×</a>
-              <h3><%= product.title %></h3>
-            </div>
-            <div class="modal-body" >
-              <% if !product.images.empty? %>
-                <%= image_tag product.images.first.large %>
-              <% end %>
-            </div>
-          </div>
-
-        <% end %>
-      
-      <% end %>
-      
-    </div> <!-- accordion -->
-
-
-<%= form_tag('upload', :method => :post) do  %>
-  <%= cl_image_upload_tag("ruchi-testing-name") %>
-    ...
-<% end %>
-  <%= cl_image_upload_tag(:image_id, :public_id=>"ruchi_test123",:crop => :limit, :width => 1000, :height => 1000, 
-                          :html => {:class => "image_upload"}) %>
-<div class='preview'></div>
-<div class='progress_bar'></div>
+ <h2>Select Any product from your dasboard and click the "Manage Variants Option from the app drodown"</h2>
 
 
 	</div> <!-- span8 / right-column -->
