--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -60,7 +60,7 @@
 
 
   <div class="span8 offset1"> 
- <h2>Select Any product from your dasboard and click the "Manage Variants Option from the app drodown"</h2>
+ <h2>Select Any product from your dasboard and click the "Manage Variants" Option from the app drodown"</h2>
 
 
 	</div> <!-- span8 / right-column -->
