--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -13,7 +13,7 @@
 <div class="row">
   
 
-<%= form_for(@product) do |f| %>	<div class="field">
+<%= form_for() do |f| %>	<div class="field">
     <div class="field">
         <%= f.label "Get Text" %> <br />
         <%= f.check_box :send_text, {}, true, false %> <br />
