--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -16,6 +16,7 @@
    <div class="field">
        <%= hidden_field_tag(:product_id, @product.id) %>
        <%= check_box_tag(:pet_dog) %>
+	   <%= f.submit "Save" %>
     </div>
 	<% end %>
     <h2>New Products</h2>
