--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -12,7 +12,7 @@
 
 <div class="row">
   <div class="span12"> 
-  <%= form_tag("/check",method: "get") do %> 
+  <%= form_tag("/check",method: "get") do |f| %> 
    <div class="field">
        <%= hidden_field_tag(:product_id, @product.id) %>
        <%= check_box_tag(:pet_dog) %>
