--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -12,11 +12,11 @@
 
 <div class="row">
   <div class="span12"> 
-  <%= form_tag("/check",method: "get") do |f| %> 
+  <%= form_tag("/check",method: "get")  %> 
    <div class="field">
        <%= hidden_field_tag(:product_id, @product.id) %>
        <%= check_box_tag(:pet_dog) %>
-	   <%= f.submit "Save" %>
+	    <%= submit_tag("Save") %>
     </div>
 	<% end %>
     <h2>New Products</h2>
