--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -15,7 +15,7 @@
   <%= form_tag("/check",method: "get") do %> 
    <div class="field">
        <%= hidden_field_tag(:product_id, @product.id) %>
-       <%= check_box_tag(:pet_dog) %>
+       <%= check_box_tag(:check) %>
 	    <%= submit_tag("Save") %>
     </div>
 	<% end %>
