--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -12,7 +12,7 @@
 
 <div class="row">
   <div class="span12"> 
-  <%= @metafields.inspect %>
+  <%= @metafields.value %>
   <%= form_tag("/check",method: "get") do %> 
    <div class="field">
        <%= hidden_field_tag(:product_id, @product.id) %>
