--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -17,8 +17,10 @@
    <div class="field">
        <%= hidden_field_tag(:product_id, @product.id) %>
 	   <% if @metafields.value=="true"%>
+	   <%= label_tag 'check', 'Show additional variant images' %>
 	     <%= check_box_tag('check', value = "1", checked = true) %>
 	   <% else %>
+	   <%= label_tag 'check', 'Show additional variant images' %>
 	   <%= check_box_tag('check', value = "1") %>
 	   <% end %>
 	    <%= submit_tag("Save") %>
