--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -56,9 +56,9 @@
                            
               <% if !@product.variants.empty? %>
 			  <p>This Product has following Options</p>
-			  <%= @product.variants.option1 %>
-			  <%= @product.variants.option2 %>
-			  <%= @product.variants.option3 %>
+			  <%= @product.variants %>
+			  <%= @product.variants %>
+			  <%= @product.variants %>
 				<h3>Variants For this product</h3>
 				<table>
 				<thead>
