--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -61,10 +61,8 @@
                            
               <% if !@product.variants.empty? %>
 			  <p>This Product has following Options</p>
-			  <%= @product.variants %>
-			  <%= @product.variants %>
-			  <%= @product.variants %>
-				<h3>Variants For this product</h3>
+			  <%= @product %>
+			  <h3>Variants For this product</h3>
 				<table>
 				<thead>
 				<th>Index</th>
