--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -61,7 +61,7 @@
                            
               <% if !@product.variants.empty? %>
 			  <p>This Product has following Options</p>
-			  <%= @product %>
+			  <%= @product.inspect %>
 			  <h3>Variants For this product</h3>
 				<table>
 				<thead>
