--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -123,6 +123,7 @@
 				   <%= form_tag("/check",method: "get") do %> 
 				   <%= color_field(:product, :favorite_color) %>
 				   <%= submit_tag("Save") %>
+				   <% end %>
 				</td>
 				</tr>
 				<% end %>
