--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -121,7 +121,7 @@
 				</td>
 				<td>
 				   <%= form_tag("/check",method: "get") do %> 
-				   <%= color_field(:product, 'favorite_color') %>
+	     <%= color_field("car", "color") %>
 				   <%= submit_tag("Save") %>
 				   <% end %>
 				</td>
