--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -121,7 +121,7 @@
 				</td>
 				<td>
 				   <%= form_tag("/color",method: "get") do %> 
-	     <%= color_field("car") %>
+	     <%= color_field("car",value="") %>
 				   <%= submit_tag("Save") %>
 				   <% end %>
 				</td>
