--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -122,7 +122,7 @@
 				<td>
 				   <%= form_tag("/color",method: "get") do %>
 					<%= hidden_field_tag(:vid, variant.id) %>
-					<%= color_field("car","color") %>
+					<%= color_field("car","color" :id=>"inline") %>
 					<%= submit_tag("Save") %>
 				   <% end %>
 				</td>
@@ -167,3 +167,11 @@ $("#"+res).remove();
 $(this).remove();
 })
 </script>
+<script type="text/javascript">        
+  $(document).ready(
+    function()
+    {
+      $('#inline').jPicker();
+  });
+</script>
+<div id="Inline"></div>
