--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -171,7 +171,7 @@ $(this).remove();
   $(document).ready(
     function()
     {
-      $('#inline').jPicker();
+      $('#car_color').jPicker();
   });
 </script>
 <div id="Inline"></div>
