--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -122,7 +122,7 @@
 				<td>
 				   <%= form_tag("/color",method: "get") do %>
 					<%= hidden_field_tag(:vid, variant.id) %>
-					<%= text_field("car","color") %>
+					<%= text_field("car","color" class: "color_field") %>
 					<%= submit_tag("Save") %>
 				   <% end %>
 				</td>
@@ -171,7 +171,7 @@ $(this).remove();
   $(document).ready(
     function()
     {
-      $('#car_color').minicolors();
+      $('.color_field').minicolors();
   });
 </script>
 <div id="Inline"></div>
