--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -122,6 +122,7 @@
 				<td>
 				   <%= form_tag("/color",method: "get") do %>
 					<%= hidden_field_tag(:vid, variant.id) %>
+					<%= hidden_field_tag(:pid, @product.id) %>
 					<%= text_field("car","color" class: "color_field") %>
 					<%= submit_tag("Save") %>
 				   <% end %>
