--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -172,7 +172,7 @@ $(this).remove();
   $(document).ready(
     function()
     {
-      $('.color_field').minicolors();
+      $('.inputbox').minicolors();
   });
 </script>
 <div id="Inline"></div>
