--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -58,7 +58,7 @@
             <div id="<%= @product.id %>" class="accordion-body collapse">
               <div class="accordion-inner">
 
-                 <%= @product.option1 %>          
+                 <%= @product.options %>          
               <% if !@product.variants.empty? %>
 			  <p>This Product has following Options</p>
 			   <h3>Variants For this product</h3>
