--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -65,7 +65,7 @@
 				</tr>
 				<tr>
 				<% @product.options.each_with_index do | option, indexO| %>
-				<td><%= option.values %></td>
+				<td><%= option.name %></td>
 				<% end %>
 				</tr>
 				</table>
