--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -77,6 +77,16 @@
 				<% end %>
 				<%= @values1  %>
 				</tr>
+				<tr>
+				<% @values2=[] %>
+				<%  @product.variants.each_with_index do |variant, indexv| %>
+				<% unless @values2.include?(variant.option2) %>
+					<% @values2 << variant.option2 %>
+				<% end %>
+				<td><%= variant.option2 %></td>
+				<% end %>
+				<%= @values2  %>
+				</tr>
 				</table>
           		
               <% if !@product.variants.empty? %>
