--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -85,8 +85,9 @@
 				</tr>
 				</table>
 				<%  @values1.each_with_index do |value, val| %>
-					<%= value %>
-				<% end %>
+				    <%= value %>
+				<%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
+					 <% end %>
           		<% if !@product.variants.empty? %>
 			 
 			   <h3>Variants For this product</h3>
