--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -89,6 +89,11 @@
 				<%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
 				<br/>
 					<% end %>
+			    <%  @values2.each_with_index do |value, val2| %>
+				    <%= value %>
+				<%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
+				<br/>
+					<% end %>
           		<% if !@product.variants.empty? %>
 			 
 			   <h3>Variants For this product</h3>
