--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -84,16 +84,21 @@
 				<% end %>
 				</tr>
 				</table>
+				<table>
 				<%  @values1.each_with_index do |value, val| %>
-				    <%= value %>
-				<%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
-				<br/>
+				 <tr>
+				 <td><%= value %></td>
+				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
+				</td>
+				</tr>
 					<% end %>
 			    <%  @values2.each_with_index do |value, val2| %>
-				    <%= value %>
-				<%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
-				<br/>
+				<tr>
+				   <td><%= value %></td>
+				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
+				</td>
 					<% end %>
+					</table>
           		<% if !@product.variants.empty? %>
 			 
 			   <h3>Variants For this product</h3>
