--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -87,6 +87,7 @@
 				<table>
 				<%  @values1.each_with_index do |value, val| %>
 				 <tr>
+				 <td><%= cl_image_tag("#{@product.id}-#{value}",:width => 50, :height => 50) %></td>
 				 <td><%= value %></td>
 				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
 				</td>
