--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -203,9 +203,9 @@ $('.cloudinary-fileupload').bind('fileuploadprogress', function(e, data) {
 </script>
 <script type="text/javascript">
 $('img').error(function(){
-var id=$(this).attr('id');
+/*var id=$(this).attr('id');
 var res = id.replace("image", "delete");
-$("#"+res).remove();
+$("#"+res).remove();*/
 $(this).remove();
 })
 </script>
