--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -87,6 +87,9 @@
 					<% if indexO == 1%>
 					<tr>
 					<td><%= option.name %></td>
+					<td>Current Swatch color/image</td>
+					<td>Upload Image</td>
+					<td>Swatch Color</td>
 					</tr>
 							<% @values2=[] %>
 						<%  @product.variants.each_with_index do |variant, indexv| %>
@@ -96,9 +99,18 @@
 						<% end %>
 						<%  @values2.each_with_index do |value, val2| %>
 						<tr>
+						<td><%= value %></td>
 						<td><%= cl_image_tag("#{@product.id}-#{value}",:width => 50, :height => 50) %></td>
-						   <td><%= value %></td>
+						   
 						<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
+						</td>
+						<td>
+						<%= form_tag("/color",method: "get") do %>
+						<%= hidden_field_tag(:vid, value) %>
+						<%= hidden_field_tag(:pid, @product.id) %>
+						<%= text_field("car","color",options={:class=>'inputbox'}) %>
+						<%= submit_tag("Save") %>
+						<% end %>
 						</td>
 						</tr>
 							<% end %>
