--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -67,6 +67,9 @@
 					<% if indexO == 0%>
 					<tr>
 					<td><%= option.name %></td>
+					<td>Current Swatch color/image</td>
+					<td>Upload Image</td>
+					<td>Swatch Color</td>
 					</tr>
 					
 					<% @values1=[] %>
@@ -77,10 +80,19 @@
 						<% end %>
 						<%  @values1.each_with_index do |value, val| %>
 						<tr>
-				<td><%= cl_image_tag("#{@product.id}-#{value}",:width => 50, :height => 50) %></td>
 				<td><%= value %></td>
+				<td><%= cl_image_tag("#{@product.id}-#{value}",:width => 50, :height => 50) %></td>
+				
 				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
 				</td>
+				<td>
+						<%= form_tag("/color",method: "get") do %>
+						<%= hidden_field_tag(:vid, value) %>
+						<%= hidden_field_tag(:pid, @product.id) %>
+						<%= text_field("car","color",options={:class=>'inputbox'}) %>
+						<%= submit_tag("Save") %>
+						<% end %>
+						</td>
 				</tr>
 				<% end %>	
 					<% end %>
