--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -127,6 +127,37 @@
 						</tr>
 							<% end %>
 					<% end %>
+					<% if indexO == 2%>
+					<tr>
+					<td><%= option.name %></td>
+					<td>Current Swatch color/image</td>
+					<td>Upload Image</td>
+					<td>Swatch Color</td>
+					</tr>
+							<% @values3=[] %>
+						<%  @product.variants.each_with_index do |variant, indexv| %>
+						<% unless @values3.include?(variant.option3) %>
+							<% @values2 << variant.option3 %>
+						<% end %>
+						<% end %>
+						<%  @values3.each_with_index do |value, val3| %>
+						<tr>
+						<td><%= value %></td>
+						<td><%= cl_image_tag("#{@product.id}-#{value}",:width => 50, :height => 50) %></td>
+						   
+						<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
+						</td>
+						<td>
+						<%= form_tag("/color",method: "get") do %>
+						<%= hidden_field_tag(:vid, value) %>
+						<%= hidden_field_tag(:pid, @product.id) %>
+						<%= text_field("car","color",options={:class=>'inputbox'}) %>
+						<%= submit_tag("Save") %>
+						<% end %>
+						</td>
+						</tr>
+							<% end %>
+					<% end %>
 				<% end %>
 				
 				<tr>
