--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -68,6 +68,7 @@
 					<tr>
 					<td><%= option.name %></td>
 					<td>Current Swatch color/image</td>
+					<td>Delete </td>
 					<td>Upload Image</td>
 					<td>Swatch Color</td>
 					</tr>
@@ -82,7 +83,7 @@
 						<tr>
 				<td><%= value %></td>
 				<td><%= cl_image_tag("#{@product.id}-#{value}",:width => 50, :height => 50) %></td>
-				
+				<td><%= link_to "Delete", url_for(:controller => "home", :action => "destroyC", :vtitle => value,:pid=>@product.id), id: @del %></td>
 				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
 				</td>
 				<td>
@@ -100,6 +101,7 @@
 					<tr>
 					<td><%= option.name %></td>
 					<td>Current Swatch color/image</td>
+					<td>Delete</td>
 					<td>Upload Image</td>
 					<td>Swatch Color</td>
 					</tr>
@@ -113,8 +115,8 @@
 						<tr>
 						<td><%= value %></td>
 						<td><%= cl_image_tag("#{@product.id}-#{value}",:width => 50, :height => 50) %></td>
-						   
-						<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
+						<td><%= link_to "Delete", url_for(:controller => "home", :action => "destroyC", :vtitle => value,:pid=>@product.id), id: @del %></td>
+   						<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
 						</td>
 						<td>
 						<%= form_tag("/color",method: "get") do %>
@@ -131,6 +133,7 @@
 					<tr>
 					<td><%= option.name %></td>
 					<td>Current Swatch color/image</td>
+					<td>Delete</td>
 					<td>Upload Image</td>
 					<td>Swatch Color</td>
 					</tr>
@@ -144,8 +147,8 @@
 						<tr>
 						<td><%= value %></td>
 						<td><%= cl_image_tag("#{@product.id}-#{value}",:width => 50, :height => 50) %></td>
-						   
-						<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
+						<td><%= link_to "Delete", url_for(:controller => "home", :action => "destroyC", :vtitle => value,:pid=>@product.id), id: @del %></td>
+ 						<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
 						</td>
 						<td>
 						<%= form_tag("/color",method: "get") do %>
