--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -12,7 +12,7 @@
 
 <div class="row">
   <div class="span12"> 
-  
+   <%= @product.id %>
   Working on fetching the the options only for swatches
    <%= form_tag("/check",method: "get") do %> 
    <div class="field">
@@ -221,7 +221,7 @@
 				</table>
 				
 					 
-					   <%= @product.handle %>
+					  
 			  <% end %>
               </div>
               
