--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -21,8 +21,7 @@
 	   <% if @metafields.value=="true"%>
 	   <%= label_tag 'check', 'Show additional variant images' %>
 	     <%= check_box_tag('check', value = "1", checked = true) %>
-	   <% else %>
-	   <%= label_tag 'check', 'Show additional variant images' %>
+	   <% else %>	   <%= label_tag 'check', 'Show additional variant images' %>
 	   <%= check_box_tag('check', value = "1") %>
 	   <% end %>
 	   <% else %>
