--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -193,7 +193,7 @@
 				<td><%= variant.option3 %></td>
 				<td>  <% if !@product.images.empty? %>
 				<% @product.images.each_with_index do | img, index1| %>
-				
+				    <%= img.small %>
 					<% if img.small.include?(variant.id.to_s) %>
 						<% @testvar = img.small %>
 						<% @imgid= img.id %>
