--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -193,9 +193,10 @@
 				<td><%= variant.option3 %></td>
 				<td>  <% if !@product.images.empty? %>
 				<% @product.images.each_with_index do | img, index1| %>
-				   
+				   <%= img.small %><br/>
+				   <%= variant.id %>
 					<% if img.small.include?(variant.id.to_s) %>
-						<%= img.small %>
+						
 						<% @testvar = img.small %>
 						<% @imgid= img.id %>
 				<%= link_to image_tag(@testvar), '#modal-'+@product.id.to_s, :'data-toggle' => 'modal' %>
