--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -59,7 +59,7 @@
             </div>
              
             <div id="<%= @product.id %>" class="accordion-body collapse">
-              <div class="accordion-inner">
+              <div class="">
 			   <p>This Product has following Options</p>
 			    <table cellpadding=10px>
 				
