--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -58,8 +58,8 @@
               </a>
             </div>
              
-            <div id="<%= @product.id %>" class="accordion-body collapse">
-              <div class="">
+            <div id="<%= @product.id %>" class="">
+              <div class="accordion-inner">
 			   <p>This Product has following Options</p>
 			    <table cellpadding=10px>
 				
