--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -19,7 +19,7 @@
        <%= hidden_field_tag(:product_id, @product.id) %>
 	   <% if @metafields %>
 	   <%= @metafields.inspect %>
-	   <% if @metafields.value=="true"%>
+	   <% if @metafields=="true"%>
 	   <%= label_tag 'check', 'Show additional variant images' %>
 	     <%= check_box_tag('check', value = "1", checked = true) %>
 	   <% else %>
