--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -257,7 +257,7 @@ $('img').error(function(){
 var res = id.replace("image", "delete");
 $("#"+res).remove();*/
     $(this).remove();
-    var tdparent=$(this).parent('td').nextSiblings('td');
+    var tdparent=$(this).parent('td').siblings('td');
     console.log(tdparent);
     })
 </script>
