--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -84,7 +84,7 @@
 						<%  @values1.each_with_index do |value, val| %>
 						<tr>
 				<td><%= value %></td>
-				<td><%= cl_image_tag("#{@product.id}-#{value}",:width => 50, :height => 50) %></td>
+				<td><%= cl_image_tag("#{@product.id}-#{value}",:width => 50, :height => 50,:html => {:class => "image_show"}) %></td>
 				<td><%= link_to "Delete", url_for(:controller => "home", :action => "destroyC", :vtitle => value,:pid=>@product.id), id: @del ,class: "delete" %></td>
 				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{@product.id}-#{value}",:resource_type=>'image',:crop => :limit,:html => {:class => "image_upload"}) %>
 				</td>
@@ -256,8 +256,8 @@ $('img').error(function(){
 /*var id=$(this).attr('id');
 var res = id.replace("image", "delete");
 $("#"+res).remove();*/
-    $(this).remove();
-    var tdparent=$(this).parent('td').siblings('td');
+    //$(this).remove();
+    var tdparent=$(this).parents('td').siblings('td');
     console.log(tdparent);
     })
 </script>
